version/0.19/_sources/api/solver/_autosummary/settings/thermophoretic_co.rst.txt
:orphan:

.. _thermophoretic_co:

thermophoretic_co
=================

.. autoclass:: ansys.fluent.core.solver.settings_241.thermophoretic_co.thermophoretic_co
    :show-inheritance:

.. rubric:: Attributes

====================================================   ============================================================

Attribute                                                                                                   Summary

====================================================   ============================================================
:ref:`option <option_7>`                                           Select method for calculating material property.

:ref:`value <value_3>`                                                         Specify the constant property value.

:ref:`piecewise_linear <piecewise_linear_1>`               Specify ranges and values for piecewise-linear property.

:ref:`piecewise_polynomial <piecewise_polynomial>`                           Specify piecewise-polynomial settings.

:ref:`polynomial <polynomial_1>`                                                   Specify polynomial coefficients.

:ref:`user_defined_function <user_defined_function>`                                 'user_defined_function' child.

====================================================   ============================================================

.. rubric:: Included in:

============================================================   ===============================================

Parent                                                                                                 Summary

============================================================   ===============================================
:ref:`inert_particle_child <inert_particle_child>`                      'child_object_type' of inert_particle.

:ref:`droplet_particle_child <droplet_particle_child>`                'child_object_type' of droplet_particle.

:ref:`combusting_particle_child <combusting_particle_child>`       'child_object_type' of combusting_particle.

:ref:`particle_mixture_child <particle_mixture_child>`                'child_object_type' of particle_mixture.

============================================================   ===============================================

