version/0.23/_sources/api/solver/_autosummary/settings/thermophoretic_co.rst.txt
:orphan:

.. _thermophoretic_co:

thermophoretic_co
=================

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.thermophoretic_co.thermophoretic_co
    :show-inheritance:

.. rubric:: Attributes

====================================================   ============================================================

Attribute                                                                                                   Summary

====================================================   ============================================================
:ref:`option <option_12>`                                          Select method for calculating material property.

:ref:`value <value_11>`                                                        Specify the constant property value.

:ref:`piecewise_linear <piecewise_linear_2>`               Specify ranges and values for piecewise-linear property.

:ref:`piecewise_polynomial <piecewise_polynomial>`                                   Piecewise polynomial settings.

:ref:`polynomial <polynomial_2>`                                                               Polynomial settings.

:ref:`user_defined_function <user_defined_function>`                                 Specify user defined function.

====================================================   ============================================================

.. rubric:: Included in:

============================================================   ===============================================

Parent                                                                                                 Summary

============================================================   ===============================================
:ref:`inert_particle_child <inert_particle_child>`                      'child_object_type' of inert_particle.

:ref:`droplet_particle_child <droplet_particle_child>`                'child_object_type' of droplet_particle.

:ref:`combusting_particle_child <combusting_particle_child>`       'child_object_type' of combusting_particle.

:ref:`particle_mixture_child <particle_mixture_child>`                'child_object_type' of particle_mixture.

:ref:`material_child <material_child_1>`                                      'child_object_type' of material.

============================================================   ===============================================

